--- a/public/logos/videochat.html
+++ b/public/logos/videochat.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0032)https://videochat.timcvetko.com/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TQ43EW288T"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-TQ43EW288T');
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chatify-link-bridge</title>
     <meta name="description" content="Lovable Generated Project">
